src/geometry/shape/cylinder/snapshots/kasane_logic__geometry__shape__cylinder__tests__cover_single_ids__diagonal_cylinder_at_z18.snap
---
source: src/geometry/shape/cylinder/tests.rs
expression: "sorted_ids(&cylinder, 18)"
---
[
    "18/-1/232846/103226",
    "18/-1/232847/103225",
    "18/-1/232847/103226",
    "18/0/232846/103225",
    "18/0/232846/103226",
    "18/0/232847/103225",
    "18/0/232847/103226",
]
